<?xml version="1.0"?>
<package format="3">
  <name>tiago_webots_ros2</name>
  <version>0.0.1</version>
  <description>The ROS2 package containing Tiago's robot components for Webots</description>
  <maintainer email="renan028@gmail.com"></maintainer>
  <author>Renan Freitas</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_map_server</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rviz2</depend> 
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>webots_ros2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
